--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/4geeks.ico" />
+    <link rel="icon" type="image/svg+xml" href="/stoplight.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>traffic light</title>
   </head>
   <body>
     <div id="root"></div>
